# foxops-client-python

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
.codeboarding/: on_boarding.md
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: cd.yml  ci.yml
src/foxops_client/: __init__.py  client.py  client_async.py  client_sync.py  exceptions.py  retries.py  types.py
tests/: conftest.py  test_client.py
tests/infrastructure/: _common.py  foxops.py  gitlab.py  network.py
