[tool.poetry]
name = "foxops-client"
version = "0.0.0"
description = "Foxops API Client"
authors = [
    "Alexander Hungenberg <alexander.hungenberg@roche.com>",
]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.13,<3.14"
httpx = "^0.28.1"
tenacity = "^9.1.2"
structlog = "^23.1.0"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
flake8 = "^6.1.0"
flake8-bugbear = "^23.7.10"
isort = "^5.9.3"
pytest = "^7.1.3"
pytest-asyncio = "^0.21.1"
pytest-cov = "^4.0.0"
pytest-docker-tools = "^3.1.3"
pytest-mock = "^3.10.0"
mypy = "^1.5.1"
GitPython = "^3.1.29"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "pep440"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[[tool.mypy.overrides]]
module = "pytest_docker_tools"
ignore_missing_imports = true

[build-system]
requires = ["poetry-core>=2.1.1", "wheel", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"
